--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/node": "^18.16.19",
     "nuxt": "^3.6.2"
+  },
+  "dependencies": {
+    "firebase": "^10.1.0",
+    "nuxt-vuefire": "^0.2.13",
+    "vuefire": "^3.1.13"
   }
 }
